force-app/zurich-base/main/default/objects/FileMimeType__mdt/FileMimeType__mdt.object-meta.xml
<CustomObject>
    <description>Relación de extensiones de ficheros y su mime type según el estándar (https://developer.mozilla.org/en-US/docs/Web/HTTP/Basics_of_HTTP/MIME_types/Common_types)</description>
    <label>File mime type</label>
    <pluralLabel>File mime types</pluralLabel>
</CustomObject>