force-app/zurich-base/main/default/objects/FileMimeType__mdt/fields/AllowedInZDA__c.field-meta.xml
<CustomField>
    <fullName>AllowedInZDA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permite indicar si este tipo de fichero esta admitido para poderlo adjuntar en los envíos de documentación hacia Canal único (ZDA)</description>
    <inlineHelpText>Indicar si se permite enviar este tipo de documento en los envíos a Canal único</inlineHelpText>
    <label>Allowed in ZDA</label>
    <type>Checkbox</type>
</CustomField>