force-app/zurich-base/main/default/objects/FileMimeType__mdt/fields/KindOfDocument__c.field-meta.xml
<CustomField>
    <fullName>KindOfDocument__c</fullName>
    <description>Tipo de documento</description>
    <label>Kind of document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>