force-app/zurich-base/main/default/objects/FileMimeType__mdt/fields/MimeType__c.field-meta.xml
<CustomField>
    <fullName>MimeType__c</fullName>
    <description>Mime type relacionado con la extensión del fichero</description>
    <label>Mime type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>